37 Frontend - Adding Used Dataset link and SQL button

--- a/visualize_graph.ipynb
+++ b/visualize_graph.ipynb
@@ -28,6 +28,7 @@
       "\tquery_gen -> reflect\n",
       "\treflect -> format_answer\n",
       "\treflect -> query_gen\n",
+      "\trelevant_selections -> __end__\n",
       "\trelevant_selections -> get_schema\n",
       "\tretrieve_similar_selections -> relevant_selections\n",
       "\tsubmit_final_answer -> save\n",
@@ -39,134 +40,140 @@
     {
      "data": {
       "image/svg+xml": [
-       "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"238pt\" height=\"692pt\" viewBox=\"0.00 0.00 238.43 692.00\">\n",
+       "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"274pt\" height=\"692pt\" viewBox=\"0.00 0.00 274.43 692.00\">\n",
        "<g id=\"graph0\" class=\"graph\" transform=\"scale(1 1) rotate(0) translate(4 688)\">\n",
-       "<polygon fill=\"white\" stroke=\"none\" points=\"-4,4 -4,-688 234.43,-688 234.43,4 -4,4\"/>\n",
+       "<polygon fill=\"white\" stroke=\"none\" points=\"-4,4 -4,-688 270.43,-688 270.43,4 -4,4\"/>\n",
        "<!-- __start__ -->\n",
        "<g id=\"node1\" class=\"node\">\n",
        "<title>__start__</title>\n",
-       "<ellipse fill=\"none\" stroke=\"black\" cx=\"110.72\" cy=\"-666\" rx=\"45.21\" ry=\"18\"/>\n",
-       "<text text-anchor=\"middle\" x=\"110.72\" y=\"-660.95\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">__start__</text>\n",
+       "<ellipse fill=\"none\" stroke=\"black\" cx=\"155.71\" cy=\"-666\" rx=\"45.21\" ry=\"18\"/>\n",
+       "<text text-anchor=\"middle\" x=\"155.71\" y=\"-660.95\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">__start__</text>\n",
        "</g>\n",
        "<!-- retrieve_similar_selections -->\n",
        "<g id=\"node2\" class=\"node\">\n",
        "<title>retrieve_similar_selections</title>\n",
-       "<ellipse fill=\"none\" stroke=\"black\" cx=\"110.72\" cy=\"-594\" rx=\"110.72\" ry=\"18\"/>\n",
-       "<text text-anchor=\"middle\" x=\"110.72\" y=\"-588.95\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">retrieve_similar_selections</text>\n",
+       "<ellipse fill=\"none\" stroke=\"black\" cx=\"155.71\" cy=\"-594\" rx=\"110.72\" ry=\"18\"/>\n",
+       "<text text-anchor=\"middle\" x=\"155.71\" y=\"-588.95\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">retrieve_similar_selections</text>\n",
        "</g>\n",
        "<!-- __start__&#45;&gt;retrieve_similar_selections -->\n",
        "<g id=\"edge1\" class=\"edge\">\n",
        "<title>__start__-&gt;retrieve_similar_selections</title>\n",
-       "<path fill=\"none\" stroke=\"black\" d=\"M110.72,-647.7C110.72,-640.41 110.72,-631.73 110.72,-623.54\"/>\n",
-       "<polygon fill=\"black\" stroke=\"black\" points=\"114.22,-623.62 110.72,-613.62 107.22,-623.62 114.22,-623.62\"/>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M155.71,-647.7C155.71,-640.41 155.71,-631.73 155.71,-623.54\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"159.21,-623.62 155.71,-613.62 152.21,-623.62 159.21,-623.62\"/>\n",
        "</g>\n",
        "<!-- relevant_selections -->\n",
        "<g id=\"node3\" class=\"node\">\n",
        "<title>relevant_selections</title>\n",
-       "<ellipse fill=\"none\" stroke=\"black\" cx=\"110.72\" cy=\"-522\" rx=\"81.55\" ry=\"18\"/>\n",
-       "<text text-anchor=\"middle\" x=\"110.72\" y=\"-516.95\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">relevant_selections</text>\n",
+       "<ellipse fill=\"none\" stroke=\"black\" cx=\"155.71\" cy=\"-522\" rx=\"81.55\" ry=\"18\"/>\n",
+       "<text text-anchor=\"middle\" x=\"155.71\" y=\"-516.95\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">relevant_selections</text>\n",
        "</g>\n",
        "<!-- retrieve_similar_selections&#45;&gt;relevant_selections -->\n",
-       "<g id=\"edge9\" class=\"edge\">\n",
+       "<g id=\"edge10\" class=\"edge\">\n",
        "<title>retrieve_similar_selections-&gt;relevant_selections</title>\n",
-       "<path fill=\"none\" stroke=\"black\" d=\"M110.72,-575.7C110.72,-568.41 110.72,-559.73 110.72,-551.54\"/>\n",
-       "<polygon fill=\"black\" stroke=\"black\" points=\"114.22,-551.62 110.72,-541.62 107.22,-551.62 114.22,-551.62\"/>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M155.71,-575.7C155.71,-568.41 155.71,-559.73 155.71,-551.54\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"159.21,-551.62 155.71,-541.62 152.21,-551.62 159.21,-551.62\"/>\n",
        "</g>\n",
        "<!-- get_schema -->\n",
        "<g id=\"node4\" class=\"node\">\n",
        "<title>get_schema</title>\n",
-       "<ellipse fill=\"none\" stroke=\"black\" cx=\"110.72\" cy=\"-450\" rx=\"54.93\" ry=\"18\"/>\n",
-       "<text text-anchor=\"middle\" x=\"110.72\" y=\"-444.95\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">get_schema</text>\n",
+       "<ellipse fill=\"none\" stroke=\"black\" cx=\"114.71\" cy=\"-450\" rx=\"54.93\" ry=\"18\"/>\n",
+       "<text text-anchor=\"middle\" x=\"114.71\" y=\"-444.95\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">get_schema</text>\n",
        "</g>\n",
        "<!-- relevant_selections&#45;&gt;get_schema -->\n",
-       "<g id=\"edge8\" class=\"edge\">\n",
+       "<g id=\"edge9\" class=\"edge\">\n",
        "<title>relevant_selections-&gt;get_schema</title>\n",
-       "<path fill=\"none\" stroke=\"black\" d=\"M110.72,-503.7C110.72,-496.41 110.72,-487.73 110.72,-479.54\"/>\n",
-       "<polygon fill=\"black\" stroke=\"black\" points=\"114.22,-479.62 110.72,-469.62 107.22,-479.62 114.22,-479.62\"/>\n",
-       "</g>\n",
-       "<!-- query_gen -->\n",
-       "<g id=\"node5\" class=\"node\">\n",
-       "<title>query_gen</title>\n",
-       "<ellipse fill=\"none\" stroke=\"black\" cx=\"110.72\" cy=\"-378\" rx=\"49.82\" ry=\"18\"/>\n",
-       "<text text-anchor=\"middle\" x=\"110.72\" y=\"-372.95\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">query_gen</text>\n",
-       "</g>\n",
-       "<!-- get_schema&#45;&gt;query_gen -->\n",
-       "<g id=\"edge3\" class=\"edge\">\n",
-       "<title>get_schema-&gt;query_gen</title>\n",
-       "<path fill=\"none\" stroke=\"black\" d=\"M110.72,-431.7C110.72,-424.41 110.72,-415.73 110.72,-407.54\"/>\n",
-       "<polygon fill=\"black\" stroke=\"black\" points=\"114.22,-407.62 110.72,-397.62 107.22,-407.62 114.22,-407.62\"/>\n",
-       "</g>\n",
-       "<!-- reflect -->\n",
-       "<g id=\"node6\" class=\"node\">\n",
-       "<title>reflect</title>\n",
-       "<ellipse fill=\"none\" stroke=\"black\" cx=\"110.72\" cy=\"-306\" rx=\"34.46\" ry=\"18\"/>\n",
-       "<text text-anchor=\"middle\" x=\"110.72\" y=\"-300.95\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">reflect</text>\n",
-       "</g>\n",
-       "<!-- query_gen&#45;&gt;reflect -->\n",
-       "<g id=\"edge5\" class=\"edge\">\n",
-       "<title>query_gen-&gt;reflect</title>\n",
-       "<path fill=\"none\" stroke=\"black\" d=\"M104.81,-359.7C104.05,-352.41 103.81,-343.73 104.07,-335.54\"/>\n",
-       "<polygon fill=\"black\" stroke=\"black\" points=\"107.56,-335.82 104.73,-325.61 100.58,-335.36 107.56,-335.82\"/>\n",
-       "</g>\n",
-       "<!-- format_answer -->\n",
-       "<g id=\"node7\" class=\"node\">\n",
-       "<title>format_answer</title>\n",
-       "<ellipse fill=\"none\" stroke=\"black\" cx=\"141.72\" cy=\"-234\" rx=\"66.71\" ry=\"18\"/>\n",
-       "<text text-anchor=\"middle\" x=\"141.72\" y=\"-228.95\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">format_answer</text>\n",
-       "</g>\n",
-       "<!-- query_gen&#45;&gt;format_answer -->\n",
-       "<g id=\"edge4\" class=\"edge\">\n",
-       "<title>query_gen-&gt;format_answer</title>\n",
-       "<path fill=\"none\" stroke=\"black\" d=\"M128.86,-360.76C138.24,-351.13 148.73,-338.07 153.72,-324 160.69,-304.35 157.1,-280.95 152.09,-263.07\"/>\n",
-       "<polygon fill=\"black\" stroke=\"black\" points=\"155.47,-262.16 149.14,-253.66 148.79,-264.25 155.47,-262.16\"/>\n",
-       "</g>\n",
-       "<!-- reflect&#45;&gt;query_gen -->\n",
-       "<g id=\"edge7\" class=\"edge\">\n",
-       "<title>reflect-&gt;query_gen</title>\n",
-       "<path fill=\"none\" stroke=\"black\" d=\"M116.62,-324.1C117.38,-331.37 117.63,-340.04 117.37,-348.24\"/>\n",
-       "<polygon fill=\"black\" stroke=\"black\" points=\"113.88,-347.98 116.73,-358.19 120.87,-348.43 113.88,-347.98\"/>\n",
-       "</g>\n",
-       "<!-- reflect&#45;&gt;format_answer -->\n",
-       "<g id=\"edge6\" class=\"edge\">\n",
-       "<title>reflect-&gt;format_answer</title>\n",
-       "<path fill=\"none\" stroke=\"black\" d=\"M118.23,-288.05C121.6,-280.43 125.68,-271.23 129.48,-262.65\"/>\n",
-       "<polygon fill=\"black\" stroke=\"black\" points=\"132.61,-264.22 133.46,-253.66 126.21,-261.39 132.61,-264.22\"/>\n",
-       "</g>\n",
-       "<!-- submit_final_answer -->\n",
-       "<g id=\"node8\" class=\"node\">\n",
-       "<title>submit_final_answer</title>\n",
-       "<ellipse fill=\"none\" stroke=\"black\" cx=\"141.72\" cy=\"-162\" rx=\"88.71\" ry=\"18\"/>\n",
-       "<text text-anchor=\"middle\" x=\"141.72\" y=\"-156.95\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">submit_final_answer</text>\n",
-       "</g>\n",
-       "<!-- format_answer&#45;&gt;submit_final_answer -->\n",
-       "<g id=\"edge2\" class=\"edge\">\n",
-       "<title>format_answer-&gt;submit_final_answer</title>\n",
-       "<path fill=\"none\" stroke=\"black\" d=\"M141.72,-215.7C141.72,-208.41 141.72,-199.73 141.72,-191.54\"/>\n",
-       "<polygon fill=\"black\" stroke=\"black\" points=\"145.22,-191.62 141.72,-181.62 138.22,-191.62 145.22,-191.62\"/>\n",
-       "</g>\n",
-       "<!-- save -->\n",
-       "<g id=\"node9\" class=\"node\">\n",
-       "<title>save</title>\n",
-       "<ellipse fill=\"none\" stroke=\"black\" cx=\"141.72\" cy=\"-90\" rx=\"27.3\" ry=\"18\"/>\n",
-       "<text text-anchor=\"middle\" x=\"141.72\" y=\"-84.95\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">save</text>\n",
-       "</g>\n",
-       "<!-- submit_final_answer&#45;&gt;save -->\n",
-       "<g id=\"edge10\" class=\"edge\">\n",
-       "<title>submit_final_answer-&gt;save</title>\n",
-       "<path fill=\"none\" stroke=\"black\" d=\"M141.72,-143.7C141.72,-136.41 141.72,-127.73 141.72,-119.54\"/>\n",
-       "<polygon fill=\"black\" stroke=\"black\" points=\"145.22,-119.62 141.72,-109.62 138.22,-119.62 145.22,-119.62\"/>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M145.58,-503.7C141.01,-495.9 135.51,-486.51 130.43,-477.83\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"133.57,-476.27 125.5,-469.41 127.53,-479.81 133.57,-476.27\"/>\n",
        "</g>\n",
        "<!-- __end__ -->\n",
        "<g id=\"node10\" class=\"node\">\n",
        "<title>__end__</title>\n",
-       "<ellipse fill=\"none\" stroke=\"black\" cx=\"141.72\" cy=\"-18\" rx=\"42.65\" ry=\"18\"/>\n",
-       "<text text-anchor=\"middle\" x=\"141.72\" y=\"-12.95\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">__end__</text>\n",
+       "<ellipse fill=\"none\" stroke=\"black\" cx=\"146.71\" cy=\"-18\" rx=\"42.65\" ry=\"18\"/>\n",
+       "<text text-anchor=\"middle\" x=\"146.71\" y=\"-12.95\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">__end__</text>\n",
+       "</g>\n",
+       "<!-- relevant_selections&#45;&gt;__end__ -->\n",
+       "<g id=\"edge8\" class=\"edge\">\n",
+       "<title>relevant_selections-&gt;__end__</title>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M166.07,-503.76C180.72,-477.7 205.71,-426.31 205.71,-379 205.71,-379 205.71,-379 205.71,-161 205.71,-117.92 182.27,-72.72 164.93,-45.2\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"167.87,-43.29 159.48,-36.82 162.01,-47.11 167.87,-43.29\"/>\n",
+       "</g>\n",
+       "<!-- query_gen -->\n",
+       "<g id=\"node5\" class=\"node\">\n",
+       "<title>query_gen</title>\n",
+       "<ellipse fill=\"none\" stroke=\"black\" cx=\"97.71\" cy=\"-378\" rx=\"49.82\" ry=\"18\"/>\n",
+       "<text text-anchor=\"middle\" x=\"97.71\" y=\"-372.95\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">query_gen</text>\n",
+       "</g>\n",
+       "<!-- get_schema&#45;&gt;query_gen -->\n",
+       "<g id=\"edge3\" class=\"edge\">\n",
+       "<title>get_schema-&gt;query_gen</title>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M110.51,-431.7C108.72,-424.32 106.58,-415.52 104.57,-407.25\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"107.99,-406.47 102.22,-397.58 101.18,-408.12 107.99,-406.47\"/>\n",
+       "</g>\n",
+       "<!-- reflect -->\n",
+       "<g id=\"node6\" class=\"node\">\n",
+       "<title>reflect</title>\n",
+       "<ellipse fill=\"none\" stroke=\"black\" cx=\"92.71\" cy=\"-306\" rx=\"34.46\" ry=\"18\"/>\n",
+       "<text text-anchor=\"middle\" x=\"92.71\" y=\"-300.95\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">reflect</text>\n",
+       "</g>\n",
+       "<!-- query_gen&#45;&gt;reflect -->\n",
+       "<g id=\"edge5\" class=\"edge\">\n",
+       "<title>query_gen-&gt;reflect</title>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M90.56,-359.7C89.29,-352.41 88.43,-343.73 88.11,-335.54\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"91.61,-335.6 88.05,-325.62 84.61,-335.64 91.61,-335.6\"/>\n",
+       "</g>\n",
+       "<!-- format_answer -->\n",
+       "<g id=\"node7\" class=\"node\">\n",
+       "<title>format_answer</title>\n",
+       "<ellipse fill=\"none\" stroke=\"black\" cx=\"92.71\" cy=\"-234\" rx=\"66.71\" ry=\"18\"/>\n",
+       "<text text-anchor=\"middle\" x=\"92.71\" y=\"-228.95\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">format_answer</text>\n",
+       "</g>\n",
+       "<!-- query_gen&#45;&gt;format_answer -->\n",
+       "<g id=\"edge4\" class=\"edge\">\n",
+       "<title>query_gen-&gt;format_answer</title>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M113.39,-360.85C121.78,-351.05 131.28,-337.8 135.71,-324 140.61,-308.77 141.06,-303.08 135.71,-288 132.15,-277.94 125.76,-268.4 118.99,-260.25\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"121.6,-257.92 112.32,-252.82 116.4,-262.6 121.6,-257.92\"/>\n",
+       "</g>\n",
+       "<!-- reflect&#45;&gt;query_gen -->\n",
+       "<g id=\"edge7\" class=\"edge\">\n",
+       "<title>reflect-&gt;query_gen</title>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M99.83,-324.1C101.11,-331.37 101.98,-340.04 102.31,-348.24\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"98.81,-348.21 102.38,-358.18 105.81,-348.16 98.81,-348.21\"/>\n",
+       "</g>\n",
+       "<!-- reflect&#45;&gt;format_answer -->\n",
+       "<g id=\"edge6\" class=\"edge\">\n",
+       "<title>reflect-&gt;format_answer</title>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M92.71,-287.7C92.71,-280.41 92.71,-271.73 92.71,-263.54\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"96.21,-263.62 92.71,-253.62 89.21,-263.62 96.21,-263.62\"/>\n",
+       "</g>\n",
+       "<!-- submit_final_answer -->\n",
+       "<g id=\"node8\" class=\"node\">\n",
+       "<title>submit_final_answer</title>\n",
+       "<ellipse fill=\"none\" stroke=\"black\" cx=\"88.71\" cy=\"-162\" rx=\"88.71\" ry=\"18\"/>\n",
+       "<text text-anchor=\"middle\" x=\"88.71\" y=\"-156.95\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">submit_final_answer</text>\n",
+       "</g>\n",
+       "<!-- format_answer&#45;&gt;submit_final_answer -->\n",
+       "<g id=\"edge2\" class=\"edge\">\n",
+       "<title>format_answer-&gt;submit_final_answer</title>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M91.72,-215.7C91.31,-208.41 90.81,-199.73 90.34,-191.54\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"93.84,-191.4 89.78,-181.62 86.85,-191.8 93.84,-191.4\"/>\n",
+       "</g>\n",
+       "<!-- save -->\n",
+       "<g id=\"node9\" class=\"node\">\n",
+       "<title>save</title>\n",
+       "<ellipse fill=\"none\" stroke=\"black\" cx=\"119.71\" cy=\"-90\" rx=\"27.3\" ry=\"18\"/>\n",
+       "<text text-anchor=\"middle\" x=\"119.71\" y=\"-84.95\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">save</text>\n",
+       "</g>\n",
+       "<!-- submit_final_answer&#45;&gt;save -->\n",
+       "<g id=\"edge11\" class=\"edge\">\n",
+       "<title>submit_final_answer-&gt;save</title>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M96.38,-143.7C99.81,-135.95 103.93,-126.64 107.75,-118.02\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"110.89,-119.57 111.74,-109.01 104.49,-116.73 110.89,-119.57\"/>\n",
        "</g>\n",
        "<!-- save&#45;&gt;__end__ -->\n",
-       "<g id=\"edge11\" class=\"edge\">\n",
+       "<g id=\"edge12\" class=\"edge\">\n",
        "<title>save-&gt;__end__</title>\n",
-       "<path fill=\"none\" stroke=\"black\" d=\"M141.72,-71.7C141.72,-64.41 141.72,-55.73 141.72,-47.54\"/>\n",
-       "<polygon fill=\"black\" stroke=\"black\" points=\"145.22,-47.62 141.72,-37.62 138.22,-47.62 145.22,-47.62\"/>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M126.25,-72.05C129.16,-64.52 132.66,-55.44 135.94,-46.94\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"139.17,-48.28 139.51,-37.69 132.64,-45.76 139.17,-48.28\"/>\n",
        "</g>\n",
        "</g>\n",
        "</svg>"
@@ -582,7 +589,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "czsu-multi-agent-text-to-sqla",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
