45b Conversational Chatbot improvements, correcting memory, chechpoints, threads and state management; making it work with frontend.

--- a/other/t2.ipynb
+++ b/other/t2.ipynb
@@ -101,11 +101,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "94a844c3",
+   "execution_count": 2,
+   "id": "07b02fdb",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import os\n",
+    "import json\n",
+    "from pathlib import Path\n",
+    "from langchain_core.messages import AIMessage, SystemMessage, RemoveMessage\n",
+    "from langchain_openai import AzureChatOpenAI\n",
+    "from langchain_core.prompts import ChatPromptTemplate\n",
+    "\n",
+    "import os\n",
+    "\n",
+    "import sqlite3\n",
+    "# Constants\n",
+    "try:\n",
+    "    BASE_DIR = Path(__file__).resolve().parents[2]\n",
+    "except NameError:\n",
+    "    BASE_DIR = Path(os.getcwd()).parents[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "94a844c3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<coroutine object load_schema at 0x0000023D053148C0>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "async def load_schema(state=None):\n",
+    "    \"\"\"Load the schema metadata from the SQLite database based on selection_code in state.\"\"\"\n",
+    "    if state and state.get(\"selection_with_possible_answer\"):\n",
+    "        selection_code = \"OBY02PKT01\"\n",
+    "        db_path = BASE_DIR / \"metadata\" / \"llm_selection_descriptions\" / \"selection_descriptions.db\"\n",
+    "        try:\n",
+    "            conn = sqlite3.connect(str(db_path))\n",
+    "            cursor = conn.cursor()\n",
+    "            cursor.execute(\n",
+    "                \"\"\"\n",
+    "                SELECT extended_description FROM selection_descriptions\n",
+    "                WHERE selection_code = ? AND extended_description IS NOT NULL AND extended_description != ''\n",
+    "                \"\"\",\n",
+    "                (selection_code,)\n",
+    "            )\n",
+    "            row = cursor.fetchone()\n",
+    "            if row:\n",
+    "                return f\"Dataset: {selection_code}.\\n\" + row[0]  # Prepend dataset info\n",
+    "            else:\n",
+    "                return f\"No schema found for selection_code {selection_code}.\"\n",
+    "        except Exception as e:\n",
+    "            return f\"Error loading schema from DB: {e}\"\n",
+    "        finally:\n",
+    "            if 'conn' in locals():\n",
+    "                conn.close()\n",
+    "    # fallback\n",
+    "    return \"No selection_code provided in state.\"\n",
+    "\n",
+    "load_schema()"
+   ]
   },
   {
    "cell_type": "code",
@@ -142,7 +207,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
