--- a/visualize_graph.ipynb
+++ b/visualize_graph.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "be640953",
    "metadata": {},
    "outputs": [
@@ -10,10 +10,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "rank_bm25 is available. BM25 search will be enabled.\n",
+      "⚠ Using InMemorySaver fallback - consider using AsyncPostgresSaver for production\n",
       "digraph {\n",
       "\t__start__\n",
       "\trewrite_query\n",
-      "\tretrieve_similar_selections\n",
+      "\tretrieve_similar_selections_hybrid_search\n",
+      "\trerank\n",
       "\trelevant_selections\n",
       "\tget_schema\n",
       "\tquery_gen\n",
@@ -33,7 +36,8 @@
       "\treflect -> summarize_messages_reflect\n",
       "\trelevant_selections -> __end__\n",
       "\trelevant_selections -> get_schema\n",
-      "\tretrieve_similar_selections -> relevant_selections\n",
+      "\trerank -> relevant_selections\n",
+      "\tretrieve_similar_selections_hybrid_search -> rerank\n",
       "\trewrite_query -> summarize_messages_rewrite\n",
       "\tsubmit_final_answer -> save\n",
       "\tsummarize_messages_format -> submit_final_answer\n",
@@ -41,7 +45,7 @@
       "\tsummarize_messages_query -> reflect\n",
       "\tsummarize_messages_reflect -> format_answer\n",
       "\tsummarize_messages_reflect -> query_gen\n",
-      "\tsummarize_messages_rewrite -> retrieve_similar_selections\n",
+      "\tsummarize_messages_rewrite -> retrieve_similar_selections_hybrid_search\n",
       "\tsave -> __end__\n",
       "}\n",
       "\n"
@@ -50,59 +54,71 @@
     {
      "data": {
       "image/svg+xml": [
-       "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"470pt\" height=\"1052pt\" viewBox=\"0.00 0.00 470.45 1052.00\">\n",
-       "<g id=\"graph0\" class=\"graph\" transform=\"scale(1 1) rotate(0) translate(4 1048)\">\n",
-       "<polygon fill=\"white\" stroke=\"none\" points=\"-4,4 -4,-1048 466.45,-1048 466.45,4 -4,4\"/>\n",
+       "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"515pt\" height=\"1124pt\" viewBox=\"0.00 0.00 514.98 1124.00\">\n",
+       "<g id=\"graph0\" class=\"graph\" transform=\"scale(1 1) rotate(0) translate(4 1120)\">\n",
+       "<polygon fill=\"white\" stroke=\"none\" points=\"-4,4 -4,-1120 510.98,-1120 510.98,4 -4,4\"/>\n",
        "<!-- __start__ -->\n",
        "<g id=\"node1\" class=\"node\">\n",
        "<title>__start__</title>\n",
-       "<ellipse fill=\"none\" stroke=\"black\" cx=\"339.45\" cy=\"-1026\" rx=\"45.21\" ry=\"18\"/>\n",
-       "<text text-anchor=\"middle\" x=\"339.45\" y=\"-1020.95\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">__start__</text>\n",
+       "<ellipse fill=\"none\" stroke=\"black\" cx=\"339.45\" cy=\"-1098\" rx=\"45.21\" ry=\"18\"/>\n",
+       "<text text-anchor=\"middle\" x=\"339.45\" y=\"-1092.95\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">__start__</text>\n",
        "</g>\n",
        "<!-- rewrite_query -->\n",
        "<g id=\"node2\" class=\"node\">\n",
        "<title>rewrite_query</title>\n",
-       "<ellipse fill=\"none\" stroke=\"black\" cx=\"339.45\" cy=\"-954\" rx=\"62.61\" ry=\"18\"/>\n",
-       "<text text-anchor=\"middle\" x=\"339.45\" y=\"-948.95\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">rewrite_query</text>\n",
+       "<ellipse fill=\"none\" stroke=\"black\" cx=\"339.45\" cy=\"-1026\" rx=\"62.61\" ry=\"18\"/>\n",
+       "<text text-anchor=\"middle\" x=\"339.45\" y=\"-1020.95\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">rewrite_query</text>\n",
        "</g>\n",
        "<!-- __start__&#45;&gt;rewrite_query -->\n",
        "<g id=\"edge1\" class=\"edge\">\n",
        "<title>__start__-&gt;rewrite_query</title>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M339.45,-1079.7C339.45,-1072.41 339.45,-1063.73 339.45,-1055.54\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"342.95,-1055.62 339.45,-1045.62 335.95,-1055.62 342.95,-1055.62\"/>\n",
+       "</g>\n",
+       "<!-- summarize_messages_rewrite -->\n",
+       "<g id=\"node12\" class=\"node\">\n",
+       "<title>summarize_messages_rewrite</title>\n",
+       "<ellipse fill=\"none\" stroke=\"black\" cx=\"339.45\" cy=\"-954\" rx=\"123\" ry=\"18\"/>\n",
+       "<text text-anchor=\"middle\" x=\"339.45\" y=\"-948.95\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">summarize_messages_rewrite</text>\n",
+       "</g>\n",
+       "<!-- rewrite_query&#45;&gt;summarize_messages_rewrite -->\n",
+       "<g id=\"edge10\" class=\"edge\">\n",
+       "<title>rewrite_query-&gt;summarize_messages_rewrite</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M339.45,-1007.7C339.45,-1000.41 339.45,-991.73 339.45,-983.54\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"342.95,-983.62 339.45,-973.62 335.95,-983.62 342.95,-983.62\"/>\n",
        "</g>\n",
-       "<!-- summarize_messages_rewrite -->\n",
-       "<g id=\"node11\" class=\"node\">\n",
-       "<title>summarize_messages_rewrite</title>\n",
-       "<ellipse fill=\"none\" stroke=\"black\" cx=\"339.45\" cy=\"-882\" rx=\"123\" ry=\"18\"/>\n",
-       "<text text-anchor=\"middle\" x=\"339.45\" y=\"-876.95\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">summarize_messages_rewrite</text>\n",
-       "</g>\n",
-       "<!-- rewrite_query&#45;&gt;summarize_messages_rewrite -->\n",
-       "<g id=\"edge9\" class=\"edge\">\n",
-       "<title>rewrite_query-&gt;summarize_messages_rewrite</title>\n",
-       "<path fill=\"none\" stroke=\"black\" d=\"M339.45,-935.7C339.45,-928.41 339.45,-919.73 339.45,-911.54\"/>\n",
-       "<polygon fill=\"black\" stroke=\"black\" points=\"342.95,-911.62 339.45,-901.62 335.95,-911.62 342.95,-911.62\"/>\n",
-       "</g>\n",
-       "<!-- retrieve_similar_selections -->\n",
+       "<!-- retrieve_similar_selections_hybrid_search -->\n",
        "<g id=\"node3\" class=\"node\">\n",
-       "<title>retrieve_similar_selections</title>\n",
-       "<ellipse fill=\"none\" stroke=\"black\" cx=\"339.45\" cy=\"-810\" rx=\"110.72\" ry=\"18\"/>\n",
-       "<text text-anchor=\"middle\" x=\"339.45\" y=\"-804.95\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">retrieve_similar_selections</text>\n",
+       "<title>retrieve_similar_selections_hybrid_search</title>\n",
+       "<ellipse fill=\"none\" stroke=\"black\" cx=\"339.45\" cy=\"-882\" rx=\"167.53\" ry=\"18\"/>\n",
+       "<text text-anchor=\"middle\" x=\"339.45\" y=\"-876.95\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">retrieve_similar_selections_hybrid_search</text>\n",
+       "</g>\n",
+       "<!-- rerank -->\n",
+       "<g id=\"node4\" class=\"node\">\n",
+       "<title>rerank</title>\n",
+       "<ellipse fill=\"none\" stroke=\"black\" cx=\"339.45\" cy=\"-810\" rx=\"34.46\" ry=\"18\"/>\n",
+       "<text text-anchor=\"middle\" x=\"339.45\" y=\"-804.95\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">rerank</text>\n",
+       "</g>\n",
+       "<!-- retrieve_similar_selections_hybrid_search&#45;&gt;rerank -->\n",
+       "<g id=\"edge9\" class=\"edge\">\n",
+       "<title>retrieve_similar_selections_hybrid_search-&gt;rerank</title>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M339.45,-863.7C339.45,-856.41 339.45,-847.73 339.45,-839.54\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"342.95,-839.62 339.45,-829.62 335.95,-839.62 342.95,-839.62\"/>\n",
        "</g>\n",
        "<!-- relevant_selections -->\n",
-       "<g id=\"node4\" class=\"node\">\n",
+       "<g id=\"node5\" class=\"node\">\n",
        "<title>relevant_selections</title>\n",
        "<ellipse fill=\"none\" stroke=\"black\" cx=\"339.45\" cy=\"-738\" rx=\"81.55\" ry=\"18\"/>\n",
        "<text text-anchor=\"middle\" x=\"339.45\" y=\"-732.95\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">relevant_selections</text>\n",
        "</g>\n",
-       "<!-- retrieve_similar_selections&#45;&gt;relevant_selections -->\n",
+       "<!-- rerank&#45;&gt;relevant_selections -->\n",
        "<g id=\"edge8\" class=\"edge\">\n",
-       "<title>retrieve_similar_selections-&gt;relevant_selections</title>\n",
+       "<title>rerank-&gt;relevant_selections</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M339.45,-791.7C339.45,-784.41 339.45,-775.73 339.45,-767.54\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"342.95,-767.62 339.45,-757.62 335.95,-767.62 342.95,-767.62\"/>\n",
        "</g>\n",
        "<!-- get_schema -->\n",
-       "<g id=\"node5\" class=\"node\">\n",
+       "<g id=\"node6\" class=\"node\">\n",
        "<title>get_schema</title>\n",
        "<ellipse fill=\"none\" stroke=\"black\" cx=\"298.45\" cy=\"-666\" rx=\"54.93\" ry=\"18\"/>\n",
        "<text text-anchor=\"middle\" x=\"298.45\" y=\"-660.95\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">get_schema</text>\n",
@@ -114,7 +130,7 @@
        "<polygon fill=\"black\" stroke=\"black\" points=\"317.3,-692.27 309.23,-685.41 311.26,-695.81 317.3,-692.27\"/>\n",
        "</g>\n",
        "<!-- __end__ -->\n",
-       "<g id=\"node15\" class=\"node\">\n",
+       "<g id=\"node16\" class=\"node\">\n",
        "<title>__end__</title>\n",
        "<ellipse fill=\"none\" stroke=\"black\" cx=\"353.45\" cy=\"-18\" rx=\"42.65\" ry=\"18\"/>\n",
        "<text text-anchor=\"middle\" x=\"353.45\" y=\"-12.95\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">__end__</text>\n",
@@ -126,7 +142,7 @@
        "<polygon fill=\"black\" stroke=\"black\" points=\"374.6,-43.29 366.21,-36.82 368.74,-47.11 374.6,-43.29\"/>\n",
        "</g>\n",
        "<!-- query_gen -->\n",
-       "<g id=\"node6\" class=\"node\">\n",
+       "<g id=\"node7\" class=\"node\">\n",
        "<title>query_gen</title>\n",
        "<ellipse fill=\"none\" stroke=\"black\" cx=\"266.45\" cy=\"-594\" rx=\"49.82\" ry=\"18\"/>\n",
        "<text text-anchor=\"middle\" x=\"266.45\" y=\"-588.95\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">query_gen</text>\n",
@@ -138,7 +154,7 @@
        "<polygon fill=\"black\" stroke=\"black\" points=\"282.23,-621.12 274.89,-613.48 275.87,-624.03 282.23,-621.12\"/>\n",
        "</g>\n",
        "<!-- summarize_messages_query -->\n",
-       "<g id=\"node12\" class=\"node\">\n",
+       "<g id=\"node13\" class=\"node\">\n",
        "<title>summarize_messages_query</title>\n",
        "<ellipse fill=\"none\" stroke=\"black\" cx=\"266.45\" cy=\"-522\" rx=\"117.89\" ry=\"18\"/>\n",
        "<text text-anchor=\"middle\" x=\"266.45\" y=\"-516.95\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">summarize_messages_query</text>\n",
@@ -150,13 +166,13 @@
        "<polygon fill=\"black\" stroke=\"black\" points=\"269.95,-551.62 266.45,-541.62 262.95,-551.62 269.95,-551.62\"/>\n",
        "</g>\n",
        "<!-- reflect -->\n",
-       "<g id=\"node7\" class=\"node\">\n",
+       "<g id=\"node8\" class=\"node\">\n",
        "<title>reflect</title>\n",
        "<ellipse fill=\"none\" stroke=\"black\" cx=\"194.45\" cy=\"-450\" rx=\"34.46\" ry=\"18\"/>\n",
        "<text text-anchor=\"middle\" x=\"194.45\" y=\"-444.95\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">reflect</text>\n",
        "</g>\n",
        "<!-- summarize_messages_reflect -->\n",
-       "<g id=\"node13\" class=\"node\">\n",
+       "<g id=\"node14\" class=\"node\">\n",
        "<title>summarize_messages_reflect</title>\n",
        "<ellipse fill=\"none\" stroke=\"black\" cx=\"120.45\" cy=\"-378\" rx=\"120.45\" ry=\"18\"/>\n",
        "<text text-anchor=\"middle\" x=\"120.45\" y=\"-372.95\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">summarize_messages_reflect</text>\n",
@@ -168,13 +184,13 @@
        "<polygon fill=\"black\" stroke=\"black\" points=\"149.32,-401.5 139.65,-397.17 144.51,-406.58 149.32,-401.5\"/>\n",
        "</g>\n",
        "<!-- format_answer -->\n",
-       "<g id=\"node8\" class=\"node\">\n",
+       "<g id=\"node9\" class=\"node\">\n",
        "<title>format_answer</title>\n",
        "<ellipse fill=\"none\" stroke=\"black\" cx=\"262.45\" cy=\"-306\" rx=\"66.71\" ry=\"18\"/>\n",
        "<text text-anchor=\"middle\" x=\"262.45\" y=\"-300.95\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">format_answer</text>\n",
        "</g>\n",
        "<!-- summarize_messages_format -->\n",
-       "<g id=\"node14\" class=\"node\">\n",
+       "<g id=\"node15\" class=\"node\">\n",
        "<title>summarize_messages_format</title>\n",
        "<ellipse fill=\"none\" stroke=\"black\" cx=\"262.45\" cy=\"-234\" rx=\"121.98\" ry=\"18\"/>\n",
        "<text text-anchor=\"middle\" x=\"262.45\" y=\"-228.95\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">summarize_messages_format</text>\n",
@@ -186,61 +202,61 @@
        "<polygon fill=\"black\" stroke=\"black\" points=\"265.95,-263.62 262.45,-253.62 258.95,-263.62 265.95,-263.62\"/>\n",
        "</g>\n",
        "<!-- submit_final_answer -->\n",
-       "<g id=\"node9\" class=\"node\">\n",
+       "<g id=\"node10\" class=\"node\">\n",
        "<title>submit_final_answer</title>\n",
        "<ellipse fill=\"none\" stroke=\"black\" cx=\"279.45\" cy=\"-162\" rx=\"88.71\" ry=\"18\"/>\n",
        "<text text-anchor=\"middle\" x=\"279.45\" y=\"-156.95\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">submit_final_answer</text>\n",
        "</g>\n",
        "<!-- save -->\n",
-       "<g id=\"node10\" class=\"node\">\n",
+       "<g id=\"node11\" class=\"node\">\n",
        "<title>save</title>\n",
        "<ellipse fill=\"none\" stroke=\"black\" cx=\"326.45\" cy=\"-90\" rx=\"27.3\" ry=\"18\"/>\n",
        "<text text-anchor=\"middle\" x=\"326.45\" y=\"-84.95\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">save</text>\n",
        "</g>\n",
        "<!-- submit_final_answer&#45;&gt;save -->\n",
-       "<g id=\"edge10\" class=\"edge\">\n",
+       "<g id=\"edge11\" class=\"edge\">\n",
        "<title>submit_final_answer-&gt;save</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M291.06,-143.7C296.65,-135.37 303.46,-125.23 309.6,-116.08\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"312.41,-118.18 315.08,-107.93 306.6,-114.28 312.41,-118.18\"/>\n",
        "</g>\n",
        "<!-- save&#45;&gt;__end__ -->\n",
-       "<g id=\"edge17\" class=\"edge\">\n",
+       "<g id=\"edge18\" class=\"edge\">\n",
        "<title>save-&gt;__end__</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M332.98,-72.05C335.89,-64.52 339.39,-55.44 342.67,-46.94\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"345.9,-48.28 346.24,-37.69 339.37,-45.76 345.9,-48.28\"/>\n",
        "</g>\n",
-       "<!-- summarize_messages_rewrite&#45;&gt;retrieve_similar_selections -->\n",
-       "<g id=\"edge16\" class=\"edge\">\n",
-       "<title>summarize_messages_rewrite-&gt;retrieve_similar_selections</title>\n",
-       "<path fill=\"none\" stroke=\"black\" d=\"M339.45,-863.7C339.45,-856.41 339.45,-847.73 339.45,-839.54\"/>\n",
-       "<polygon fill=\"black\" stroke=\"black\" points=\"342.95,-839.62 339.45,-829.62 335.95,-839.62 342.95,-839.62\"/>\n",
+       "<!-- summarize_messages_rewrite&#45;&gt;retrieve_similar_selections_hybrid_search -->\n",
+       "<g id=\"edge17\" class=\"edge\">\n",
+       "<title>summarize_messages_rewrite-&gt;retrieve_similar_selections_hybrid_search</title>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M339.45,-935.7C339.45,-928.41 339.45,-919.73 339.45,-911.54\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"342.95,-911.62 339.45,-901.62 335.95,-911.62 342.95,-911.62\"/>\n",
        "</g>\n",
        "<!-- summarize_messages_query&#45;&gt;reflect -->\n",
-       "<g id=\"edge13\" class=\"edge\">\n",
+       "<g id=\"edge14\" class=\"edge\">\n",
        "<title>summarize_messages_query-&gt;reflect</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M249.02,-504.05C239.78,-495.08 228.3,-483.92 218.26,-474.15\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"220.94,-471.87 211.33,-467.41 216.06,-476.89 220.94,-471.87\"/>\n",
        "</g>\n",
        "<!-- summarize_messages_query&#45;&gt;format_answer -->\n",
-       "<g id=\"edge12\" class=\"edge\">\n",
+       "<g id=\"edge13\" class=\"edge\">\n",
        "<title>summarize_messages_query-&gt;format_answer</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M266.12,-503.85C265.44,-467.14 263.82,-380.66 262.98,-335.53\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"266.48,-335.68 262.8,-325.75 259.48,-335.81 266.48,-335.68\"/>\n",
        "</g>\n",
        "<!-- summarize_messages_reflect&#45;&gt;query_gen -->\n",
-       "<g id=\"edge15\" class=\"edge\">\n",
+       "<g id=\"edge16\" class=\"edge\">\n",
        "<title>summarize_messages_reflect-&gt;query_gen</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M117.27,-396.32C112.45,-428.23 106.98,-496.98 139.45,-540 156.51,-562.61 185.01,-575.65 210.69,-583.13\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"209.46,-586.42 220.02,-585.61 211.26,-579.65 209.46,-586.42\"/>\n",
        "</g>\n",
        "<!-- summarize_messages_reflect&#45;&gt;format_answer -->\n",
-       "<g id=\"edge14\" class=\"edge\">\n",
+       "<g id=\"edge15\" class=\"edge\">\n",
        "<title>summarize_messages_reflect-&gt;format_answer</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M154.1,-360.41C174.26,-350.47 200.03,-337.77 221.38,-327.24\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"222.68,-330.5 230.1,-322.94 219.59,-324.23 222.68,-330.5\"/>\n",
        "</g>\n",
        "<!-- summarize_messages_format&#45;&gt;submit_final_answer -->\n",
-       "<g id=\"edge11\" class=\"edge\">\n",
+       "<g id=\"edge12\" class=\"edge\">\n",
        "<title>summarize_messages_format-&gt;submit_final_answer</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M266.65,-215.7C268.44,-208.32 270.58,-199.52 272.58,-191.25\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"275.98,-192.12 274.93,-181.58 269.17,-190.47 275.98,-192.12\"/>\n",
@@ -659,7 +675,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -673,7 +689,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
