114a Postgres Checkpoint Adjustments 2

--- a/Evaluations/LangSmith_Evaluation/langsmith_evaluate_output.ipynb
+++ b/Evaluations/LangSmith_Evaluation/langsmith_evaluate_output.ipynb
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Temporarily setting MY_AGENT_DEBUG=0 for this notebook execution (was: 1)\n",
+      "Temporarily setting DEBUG=0 for this notebook execution (was: 1)\n",
       "View the evaluation results for experiment: 'test1-c80fcf42' at:\n",
       "https://smith.langchain.com/o/817120e4-bc86-484a-9c30-795e42f5bb9e/datasets/038e0f73-9559-4744-bdb6-a36c24a11f96/compare?selectedSessions=13396ef4-7da5-4727-9ac3-31e6706202ae\n",
       "\n",
@@ -232,10 +232,10 @@
     "import sys\n",
     "import os\n",
     "\n",
-    "# Temporarily override MY_AGENT_DEBUG for this notebook execution\n",
-    "original_debug_value = os.environ.get('MY_AGENT_DEBUG')\n",
-    "os.environ['MY_AGENT_DEBUG'] = '0'\n",
-    "print(f\"Temporarily setting MY_AGENT_DEBUG=0 for this notebook execution (was: {original_debug_value})\")\n",
+    "# Temporarily override DEBUG for this notebook execution\n",
+    "original_debug_value = os.environ.get('DEBUG')\n",
+    "os.environ['DEBUG'] = '0'\n",
+    "print(f\"Temporarily setting DEBUG=0 for this notebook execution (was: {original_debug_value})\")\n",
     "\n",
     "# Add the parent directory to the Python path so we can import the my_agent module\n",
     "parent_dir = os.path.abspath(os.path.join(os.getcwd(), '..'))\n",
@@ -361,8 +361,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Finished evaluation. Restoring MY_AGENT_DEBUG environment variable...\n",
-      "Restored MY_AGENT_DEBUG to original value: 1\n"
+      "Finished evaluation. Restoring DEBUG environment variable...\n",
+      "Restored DEBUG to original value: 1\n"
      ]
     }
    ],
@@ -370,16 +370,16 @@
     "#==============================================================================\n",
     "# CLEANUP\n",
     "#==============================================================================\n",
-    "# Restore original MY_AGENT_DEBUG value\n",
-    "print(f\"Finished evaluation. Restoring MY_AGENT_DEBUG environment variable...\")\n",
+    "# Restore original DEBUG value\n",
+    "print(f\"Finished evaluation. Restoring DEBUG environment variable...\")\n",
     "if original_debug_value is not None:\n",
-    "    os.environ['MY_AGENT_DEBUG'] = original_debug_value\n",
-    "    print(f\"Restored MY_AGENT_DEBUG to original value: {original_debug_value}\")\n",
+    "    os.environ['DEBUG'] = original_debug_value\n",
+    "    print(f\"Restored DEBUG to original value: {original_debug_value}\")\n",
     "else:\n",
     "    # If it was not set before, remove it\n",
-    "    if 'MY_AGENT_DEBUG' in os.environ:\n",
-    "        del os.environ['MY_AGENT_DEBUG']\n",
-    "        print(\"Removed temporary MY_AGENT_DEBUG environment variable\")"
+    "    if 'DEBUG' in os.environ:\n",
+    "        del os.environ['DEBUG']\n",
+    "        print(\"Removed temporary DEBUG environment variable\")"
    ]
   }
  ],
