--- a/other/testing_tools.ipynb
+++ b/other/testing_tools.ipynb
@@ -34,7 +34,7 @@
     "# CONSTANTS & CONFIGURATION\n",
     "#===============================================================================\n",
     "# Debug configuration - module level export\n",
-    "DEBUG_MODE = os.getenv(\"MY_AGENT_DEBUG\", \"1\").lower() in (\"1\", \"true\", \"yes\")\n",
+    "DEBUG_MODE = os.getenv(\"DEBUG\", \"1\").lower() in (\"1\", \"true\", \"yes\")\n",
     "\n",
     "# Constants\n",
     "TOOL_ID = 20  # Static ID for PandasQueryTool\n",
