--- a/other/t1.ipynb
+++ b/other/t1.ipynb
@@ -399,11 +399,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "d1804cb6",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "RuntimeError",
+     "evalue": "asyncio.run() cannot be called from a running event loop",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mRuntimeError\u001b[39m                              Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 60\u001b[39m\n\u001b[32m     57\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m results\n\u001b[32m     59\u001b[39m \u001b[38;5;66;03m# Run the demo\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m60\u001b[39m \u001b[43masyncio\u001b[49m\u001b[43m.\u001b[49m\u001b[43mrun\u001b[49m\u001b[43m(\u001b[49m\u001b[43msimple_restaurant_demo\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~\\AppData\\Roaming\\uv\\python\\cpython-3.11.9-windows-x86_64-none\\Lib\\asyncio\\runners.py:186\u001b[39m, in \u001b[36mrun\u001b[39m\u001b[34m(main, debug)\u001b[39m\n\u001b[32m    161\u001b[39m \u001b[38;5;250m\u001b[39m\u001b[33;03m\"\"\"Execute the coroutine and return the result.\u001b[39;00m\n\u001b[32m    162\u001b[39m \n\u001b[32m    163\u001b[39m \u001b[33;03mThis function runs the passed coroutine, taking care of\u001b[39;00m\n\u001b[32m   (...)\u001b[39m\u001b[32m    182\u001b[39m \u001b[33;03m    asyncio.run(main())\u001b[39;00m\n\u001b[32m    183\u001b[39m \u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m    184\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m events._get_running_loop() \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m    185\u001b[39m     \u001b[38;5;66;03m# fail fast with short traceback\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m186\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m(\n\u001b[32m    187\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33masyncio.run() cannot be called from a running event loop\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m    189\u001b[39m \u001b[38;5;28;01mwith\u001b[39;00m Runner(debug=debug) \u001b[38;5;28;01mas\u001b[39;00m runner:\n\u001b[32m    190\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m runner.run(main)\n",
+      "\u001b[31mRuntimeError\u001b[39m: asyncio.run() cannot be called from a running event loop"
+     ]
+    }
+   ],
+   "source": [
+    "import asyncio\n",
+    "import time\n",
+    "\n",
+    "# Global counter to show execution order\n",
+    "step_counter = 0\n",
+    "\n",
+    "def next_step():\n",
+    "    global step_counter\n",
+    "    step_counter += 1\n",
+    "    return step_counter\n",
+    "\n",
+    "async def cook_meal(name, cook_time):\n",
+    "    \"\"\"Simulate cooking a meal\"\"\"\n",
+    "    step = next_step()\n",
+    "    print(f\"🍳 Step {step}: Started cooking {name} (takes {cook_time}s)\")\n",
+    "    await asyncio.sleep(cook_time)  # This is where we yield control\n",
+    "    step = next_step()\n",
+    "    print(f\"✅ Step {step}: {name} is ready!\")\n",
+    "    return f\"{name} meal\"\n",
+    "\n",
+    "async def serve_customer(customer_name, meal, cook_time):\n",
+    "    \"\"\"Simulate serving one customer\"\"\"\n",
+    "    step = next_step()\n",
+    "    print(f\"👋 Step {step}: Greeting {customer_name}\")\n",
+    "    \n",
+    "    # Take the order (instant)\n",
+    "    step = next_step()\n",
+    "    print(f\"📝 Step {step}: Taking order from {customer_name}: {meal}\")\n",
+    "    \n",
+    "    # Send order to kitchen and wait (this is where we \"await\")\n",
+    "    meal_result = await cook_meal(meal, cook_time)\n",
+    "    \n",
+    "    # Serve the meal (instant)\n",
+    "    step = next_step()\n",
+    "    print(f\"🍽️ Step {step}: Serving {meal_result} to {customer_name}\")\n",
+    "    return f\"{customer_name} served\"\n",
+    "\n",
+    "async def simple_restaurant_demo():\n",
+    "    \"\"\"Simple demo showing event loop switching with numbered steps\"\"\"\n",
+    "    global step_counter\n",
+    "    step_counter = 0  # Reset counter\n",
+    "    \n",
+    "    print(\"🏪 Restaurant Demo: Watch the Step Numbers!\")\n",
+    "    print(\"=\" * 50)\n",
+    "    \n",
+    "    # Start serving 3 customers concurrently\n",
+    "    # Watch how the step numbers show the switching!\n",
+    "    results = await asyncio.gather(\n",
+    "        serve_customer(\"Alice\", \"Pasta\", 2),\n",
+    "        serve_customer(\"Bob\", \"Burger\", 1),\n",
+    "        serve_customer(\"Carol\", \"Salad\", 0.5)\n",
+    "    )\n",
+    "    \n",
+    "    print(\"=\" * 50)\n",
+    "    print(\"🎉 All customers served!\")\n",
+    "    print(f\"📊 Total steps: {step_counter}\")\n",
+    "    return results\n",
+    "\n",
+    "# Run the demo\n",
+    "asyncio.run(simple_restaurant_demo())"
+   ]
   },
   {
    "cell_type": "code",
@@ -424,7 +498,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
