--- a/visualize_graph.ipynb
+++ b/visualize_graph.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "be640953",
    "metadata": {},
    "outputs": [
@@ -10,9 +10,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Warning: Some API imports failed during package initialization: cannot import name 'create_graph' from partially initialized module 'my_agent' (most likely due to a circular import) (e:\\OneDrive\\Knowledge Base\\0207_GenAI\\Code\\czsu_home2\\czsu-multi-agent-text-to-sql\\my_agent\\__init__.py)\n",
       "rank_bm25 is available. BM25 search will be enabled.\n",
       "rank_bm25 is available. BM25 search will be enabled.\n",
-      "⚠ Using InMemorySaver fallback - consider using AsyncPostgresSaver for production\n",
+      "⚠️ Using InMemorySaver fallback - consider using AsyncPostgresSaver for production\n",
       "digraph {\n",
       "\t__start__\n",
       "\trewrite_query\n",
@@ -341,17 +342,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
     }
    ],
    "source": [
@@ -757,7 +747,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "czsu-multi-agent-text-to-sql (3.11.9)",
    "language": "python",
    "name": "python3"
   },
