180 Improving prompt to LlamaParse, including column seprator

--- a/other/1.ipynb
+++ b/other/1.ipynb
@@ -485,12 +485,321 @@
    "id": "164bad1a",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "(total_tokens + max_tokens - 1) // max_tokens"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "6ad1bf75",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(12000+8000-1)//8000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "298ea56b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "7d324499",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "3\n",
+      "3\n",
+      "2\n",
+      "2\n",
+      "4\n",
+      "4\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "3\n",
+      "3\n",
+      "23\n",
+      "23\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "3\n",
+      "3\n",
+      "2\n",
+      "2\n",
+      "1\n",
+      "1\n",
+      "2\n",
+      "2\n",
+      "1\n",
+      "1\n",
+      "4\n",
+      "4\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "2\n",
+      "2\n",
+      "6\n",
+      "6\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "4\n",
+      "4\n",
+      "3\n",
+      "3\n",
+      "4\n",
+      "4\n",
+      "12\n",
+      "12\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "2\n",
+      "2\n",
+      "11\n",
+      "11\n",
+      "3\n",
+      "3\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "214\n",
+      "214\n",
+      "3\n",
+      "3\n",
+      "1\n",
+      "1\n",
+      "3\n",
+      "3\n",
+      "2\n",
+      "2\n",
+      "1\n",
+      "1\n",
+      "3\n",
+      "3\n",
+      "5\n",
+      "5\n",
+      "19\n",
+      "19\n",
+      "1\n",
+      "1\n",
+      "117\n",
+      "117\n",
+      "1\n",
+      "1\n",
+      "13\n",
+      "13\n",
+      "6\n",
+      "6\n",
+      "2\n",
+      "2\n",
+      "1\n",
+      "1\n",
+      "8\n",
+      "8\n",
+      "1\n",
+      "1\n",
+      "2\n",
+      "2\n",
+      "8\n",
+      "8\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "2\n",
+      "2\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "4\n",
+      "4\n",
+      "3\n",
+      "3\n",
+      "1\n",
+      "1\n",
+      "3\n",
+      "3\n",
+      "2\n",
+      "2\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "2\n",
+      "2\n",
+      "6\n",
+      "6\n",
+      "1\n",
+      "1\n",
+      "3\n",
+      "3\n",
+      "2\n",
+      "2\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "2\n",
+      "2\n",
+      "13\n",
+      "13\n",
+      "1\n",
+      "1\n",
+      "7\n",
+      "7\n",
+      "1\n",
+      "1\n",
+      "3\n",
+      "3\n",
+      "6\n",
+      "6\n",
+      "✅ All tests passed: Both ceiling division methods are equivalent.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "import math\n",
+    "\n",
+    "# Configuration variables\n",
+    "DEFAULT_FUNC1 = lambda a, b: (a + b - 1) // b  # Integer ceiling division\n",
+    "DEFAULT_FUNC2 = lambda a, b: math.ceil(a / b)  # Float ceiling division\n",
+    "NUM_TESTS = 100\n",
+    "MIN_VALUE = 1\n",
+    "MAX_VALUE = 1000000\n",
+    "\n",
+    "def test_ceiling_division_equivalence(\n",
+    "    func1=DEFAULT_FUNC1, \n",
+    "    func2=DEFAULT_FUNC2, \n",
+    "    num_tests=NUM_TESTS, \n",
+    "    min_val=MIN_VALUE, \n",
+    "    max_val=MAX_VALUE\n",
+    "):\n",
+    "    \"\"\"Test that two ceiling division functions produce equivalent results.\n",
+    "    \n",
+    "    Args:\n",
+    "        func1: First function that takes (total_tokens, max_tokens) and returns num_chunks\n",
+    "        func2: Second function that takes (total_tokens, max_tokens) and returns num_chunks\n",
+    "        num_tests: Number of random test cases to run\n",
+    "        min_val: Minimum value for random integers (inclusive)\n",
+    "        max_val: Maximum value for random integers (inclusive)\n",
+    "    \"\"\"\n",
+    "    for test_idx in range(num_tests):\n",
+    "        # Generate random positive integers for testing\n",
+    "        total_tokens = random.randint(min_val, max_val)\n",
+    "        max_tokens = random.randint(min_val, max_val)\n",
+    "        \n",
+    "        # Compute results using both functions\n",
+    "        result1 = func1(total_tokens, max_tokens)\n",
+    "        print(result1)\n",
+    "        result2 = func2(total_tokens, max_tokens)\n",
+    "        print(result2)\n",
+    "        \n",
+    "        # Assert equivalence\n",
+    "        assert result1 == result2, (\n",
+    "            f\"Ceiling division mismatch in test {test_idx + 1}: \"\n",
+    "            f\"{result1} != {result2} for total_tokens={total_tokens}, max_tokens={max_tokens}\"\n",
+    "        )\n",
+    "\n",
+    "# Example usage\n",
+    "if __name__ == \"__main__\":\n",
+    "    # Run with default config\n",
+    "    test_ceiling_division_equivalence()\n",
+    "    print(\"✅ All tests passed: Both ceiling division methods are equivalent.\")\n",
+    "    \n",
+    "    # Example with custom functions\n",
+    "    # custom_func1 = lambda a, b: (a + b - 1) // b\n",
+    "    # custom_func2 = lambda a, b: math.ceil(float(a) / b)\n",
+    "    # test_ceiling_division_equivalence(func1=custom_func1, func2=custom_func2, num_tests=50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2975d6da",
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ad1bf75",
+   "id": "b51c902f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -498,7 +807,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "czsu-multi-agent-text-to-sql (3.11.9)",
    "language": "python",
    "name": "python3"
   },
