268 Adding System Prompt Key Points into docstring and improving key steps in docstring, adding comments into the code based on key steps in docstrings.

--- a/visualize_graph.ipynb
+++ b/visualize_graph.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "be640953",
    "metadata": {},
    "outputs": [
@@ -10,10 +10,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "🔍 BASE_DIR calculated from __file__: C:\\Users\\mmiscanuk\\OneDrive\\Knowledge Base\\0207_GenAI\\Code\\czsu-multi-agent-text-to-sql\n",
+      "🔍 Current working directory: c:\\Users\\mmiscanuk\\OneDrive\\Knowledge Base\\0207_GenAI\\Code\\czsu-multi-agent-text-to-sql\n",
+      "🔍 BASE_DIR calculated from __file__: C:\\Users\\mmiscanuk\\OneDrive\\Knowledge Base\\0207_GenAI\\Code\\czsu-multi-agent-text-to-sql\n",
+      "rank_bm25 is available. BM25 search will be enabled.\n",
       "⚠️ Using InMemorySaver fallback - consider using AsyncPostgresSaver for production\n",
       "digraph {\n",
       "\t__start__\n",
-      "\trewrite_query\n",
+      "\trewrite_prompt\n",
       "\tsummarize_messages_rewrite\n",
       "\tretrieve_similar_selections_hybrid_search\n",
       "\trerank_table_descriptions\n",
@@ -34,7 +38,7 @@
       "\tsave\n",
       "\tcleanup_resources\n",
       "\t__end__\n",
-      "\t__start__ -> rewrite_query\n",
+      "\t__start__ -> rewrite_prompt\n",
       "\tformat_answer -> summarize_messages_format\n",
       "\tgenerate_followup_prompts -> submit_final_answer\n",
       "\tgenerate_query -> summarize_messages_query\n",
@@ -49,7 +53,7 @@
       "\trerank_table_descriptions -> relevant_selections\n",
       "\tretrieve_similar_chunks_hybrid_search -> rerank_chunks\n",
       "\tretrieve_similar_selections_hybrid_search -> rerank_table_descriptions\n",
-      "\trewrite_query -> summarize_messages_rewrite\n",
+      "\trewrite_prompt -> summarize_messages_rewrite\n",
       "\tsave -> cleanup_resources\n",
       "\tsubmit_final_answer -> save\n",
       "\tsummarize_messages_format -> generate_followup_prompts\n",
@@ -76,15 +80,15 @@
        "<ellipse fill=\"none\" stroke=\"black\" cx=\"395.89\" cy=\"-1314\" rx=\"45.21\" ry=\"18\"/>\n",
        "<text text-anchor=\"middle\" x=\"395.89\" y=\"-1308.95\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">__start__</text>\n",
        "</g>\n",
-       "<!-- rewrite_query -->\n",
+       "<!-- rewrite_prompt -->\n",
        "<g id=\"node2\" class=\"node\">\n",
-       "<title>rewrite_query</title>\n",
-       "<ellipse fill=\"none\" stroke=\"black\" cx=\"395.89\" cy=\"-1242\" rx=\"62.61\" ry=\"18\"/>\n",
-       "<text text-anchor=\"middle\" x=\"395.89\" y=\"-1236.95\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">rewrite_query</text>\n",
+       "<title>rewrite_prompt</title>\n",
+       "<ellipse fill=\"none\" stroke=\"black\" cx=\"395.89\" cy=\"-1242\" rx=\"68.75\" ry=\"18\"/>\n",
+       "<text text-anchor=\"middle\" x=\"395.89\" y=\"-1236.95\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">rewrite_prompt</text>\n",
        "</g>\n",
-       "<!-- __start__&#45;&gt;rewrite_query -->\n",
+       "<!-- __start__&#45;&gt;rewrite_prompt -->\n",
        "<g id=\"edge1\" class=\"edge\">\n",
-       "<title>__start__-&gt;rewrite_query</title>\n",
+       "<title>__start__-&gt;rewrite_prompt</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M395.89,-1295.7C395.89,-1288.41 395.89,-1279.73 395.89,-1271.54\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"399.39,-1271.62 395.89,-1261.62 392.39,-1271.62 399.39,-1271.62\"/>\n",
        "</g>\n",
@@ -94,9 +98,9 @@
        "<ellipse fill=\"none\" stroke=\"black\" cx=\"395.89\" cy=\"-1170\" rx=\"123\" ry=\"18\"/>\n",
        "<text text-anchor=\"middle\" x=\"395.89\" y=\"-1164.95\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">summarize_messages_rewrite</text>\n",
        "</g>\n",
-       "<!-- rewrite_query&#45;&gt;summarize_messages_rewrite -->\n",
+       "<!-- rewrite_prompt&#45;&gt;summarize_messages_rewrite -->\n",
        "<g id=\"edge16\" class=\"edge\">\n",
-       "<title>rewrite_query-&gt;summarize_messages_rewrite</title>\n",
+       "<title>rewrite_prompt-&gt;summarize_messages_rewrite</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M395.89,-1223.7C395.89,-1216.41 395.89,-1207.73 395.89,-1199.54\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"399.39,-1199.62 395.89,-1189.62 392.39,-1199.62 399.39,-1199.62\"/>\n",
        "</g>\n",
