--- a/other/1.ipynb
+++ b/other/1.ipynb
@@ -790,11 +790,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "2975d6da",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "RuntimeError",
+     "evalue": "asyncio.run() cannot be called from a running event loop",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mRuntimeError\u001b[39m                              Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 28\u001b[39m\n\u001b[32m     25\u001b[39m     results = \u001b[38;5;28;01mawait\u001b[39;00m asyncio.gather(*tasks)\n\u001b[32m     26\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m results\n\u001b[32m---> \u001b[39m\u001b[32m28\u001b[39m \u001b[43masyncio\u001b[49m\u001b[43m.\u001b[49m\u001b[43mrun\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdemonstrate_states\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mC:\\Python311\\Lib\\asyncio\\runners.py:186\u001b[39m, in \u001b[36mrun\u001b[39m\u001b[34m(main, debug)\u001b[39m\n\u001b[32m    161\u001b[39m \u001b[38;5;250m\u001b[39m\u001b[33;03m\"\"\"Execute the coroutine and return the result.\u001b[39;00m\n\u001b[32m    162\u001b[39m \n\u001b[32m    163\u001b[39m \u001b[33;03mThis function runs the passed coroutine, taking care of\u001b[39;00m\n\u001b[32m   (...)\u001b[39m\u001b[32m    182\u001b[39m \u001b[33;03m    asyncio.run(main())\u001b[39;00m\n\u001b[32m    183\u001b[39m \u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m    184\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m events._get_running_loop() \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m    185\u001b[39m     \u001b[38;5;66;03m# fail fast with short traceback\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m186\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m(\n\u001b[32m    187\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33masyncio.run() cannot be called from a running event loop\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m    189\u001b[39m \u001b[38;5;28;01mwith\u001b[39;00m Runner(debug=debug) \u001b[38;5;28;01mas\u001b[39;00m runner:\n\u001b[32m    190\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m runner.run(main)\n",
+      "\u001b[31mRuntimeError\u001b[39m: asyncio.run() cannot be called from a running event loop"
+     ]
+    }
+   ],
+   "source": [
+    "import asyncio\n",
+    "import time\n",
+    "\n",
+    "async def demonstrate_states():\n",
+    "    \"\"\"Show how coroutines move through different states\"\"\"\n",
+    "    \n",
+    "    async def task_with_states(name, delay):\n",
+    "        print(f\"🟢 RUNNING: {name} starts\")\n",
+    "        \n",
+    "        print(f\"🟡 SUSPENDED: {name} going to sleep for {delay}s\")\n",
+    "        await asyncio.sleep(delay)  # SUSPENDED state\n",
+    "        \n",
+    "        print(f\"🟢 RUNNING: {name} wakes up\")\n",
+    "        print(f\"🔵 COMPLETED: {name} finished\")\n",
+    "        return f\"{name} result\"\n",
+    "    \n",
+    "    # Create multiple tasks\n",
+    "    tasks = [\n",
+    "        asyncio.create_task(task_with_states(\"Task1\", 1)),\n",
+    "        asyncio.create_task(task_with_states(\"Task2\", 2)),\n",
+    "        asyncio.create_task(task_with_states(\"Task3\", 0.5))\n",
+    "    ]\n",
+    "    \n",
+    "    # Event loop manages all tasks\n",
+    "    results = await asyncio.gather(*tasks)\n",
+    "    return results\n",
+    "\n",
+    "asyncio.run(demonstrate_states())"
+   ]
   },
   {
    "cell_type": "code",
