306 Evaluations, cleanup files locations. Generating Simple set of QA Pairs.

--- a/Evaluations/OLD/langsmith_create_golden_dataset_problematic2.ipynb
+++ b/Evaluations/OLD/langsmith_create_golden_dataset_problematic2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "a23d96bb",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dataset 'czsu agent problematic2' found with ID: 66b09efd-354e-49c9-97fe-bc936a0610a6\n",
+      "Dataset 'czsu agent problematic2' created with ID: 3a539a49-7ecb-4f5c-bd4f-2b8886d3ec6e\n",
       "Added 18 new examples to dataset 'czsu agent problematic2'.\n"
      ]
     }
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "16f75d27",
    "metadata": {},
    "outputs": [
@@ -232,7 +232,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dataset 'czsu agent problematic2c' created with ID: f27cbfff-8054-42b7-9744-988126798809\n",
+      "Dataset 'czsu agent problematic2c' created with ID: e700e593-5cbf-4524-898c-87fba572105f\n",
       "Added 30 new examples to dataset 'czsu agent problematic2c'.\n"
      ]
     }
@@ -362,7 +362,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "czsu-multi-agent-text-to-sql (3.11.9)",
    "language": "python",
    "name": "python3"
   },
