--- a/Evaluations/OLD/langsmith_create_golden_dataset.ipynb
+++ b/Evaluations/OLD/langsmith_create_golden_dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "a23d96bb",
    "metadata": {},
    "outputs": [
@@ -10,8 +10,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dataset 'czsu agent' found with ID: e585a306-7113-491d-ba41-bc03c09eb612\n",
-      "Added 30 new examples to dataset 'czsu agent'.\n"
+      "Dataset 'czsu agent' found with ID: 976819c1-7728-4e6a-b3a4-c674a58ec524\n",
+      "No new examples to add; all questions already exist in the dataset.\n"
      ]
     }
    ],
@@ -116,7 +116,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "czsu-multi-agent-text-to-sql",
+   "display_name": "czsu-multi-agent-text-to-sql (3.11.9)",
    "language": "python",
    "name": "python3"
   },
