--- a/Evaluations/OLD/langsmith_evaluate_output.ipynb
+++ b/Evaluations/OLD/langsmith_evaluate_output.ipynb
@@ -246,7 +246,7 @@
     "from langsmith import aevaluate\n",
     "from my_agent import create_graph\n",
     "from my_agent.utils.state import DataAnalysisState\n",
-    "from my_agent.utils.models import get_azure_llm_gpt_4o\n",
+    "from my_agent.utils.models import get_azure_openai_chat_llm\n",
     "\n",
     "#==============================================================================\n",
     "# INITIALIZATION\n",
@@ -260,7 +260,7 @@
     "}\n",
     "\n",
     "# Get Model\n",
-    "judge_llm = get_azure_llm_gpt_4o(temperature=0.0)\n",
+    "judge_llm = get_azure_openai_chat_llm(deployment_name=\"gpt-4o__test1\", model_name=\"gpt-4o\", openai_api_version=\"2024-05-01-preview\", temperature=0.0)\n",
     "\n",
     "# Create the agent graph\n",
     "graph = create_graph()\n",
